<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pixel.singletune.app.ui.MainActivity">
    <!--TODO: refactor out the login to an options  activity -->
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="@string/search_title" />
    <item
        android:id="@+id/add_tune"
        android:showAsAction="always"
        android:title="@string/addTuneMenu"
        android:icon="@drawable/mr_ic_audio_vol"/>
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_action_user"
        android:showAsAction="never"
        android:title="@string/action_userProfile_title" />
    <item
        android:id="@+id/action_logout"
        android:showAsAction="never"
        android:title="@string/action_logout" />
</menu>
