<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tuneImage"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/tune_listView_image"
            android:src="@drawable/tune_placeholder" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/alpha_deep_blue"
            android:orientation="horizontal"
            android:layout_alignBottom="@+id/tuneImage"
            android:id="@+id/linearLayout">

            <ImageButton
                android:id="@+id/btnPlay"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:scaleType="fitCenter"
                android:background="@color/tune_ic_bg_blue"
                android:src="@drawable/btn_play" />

            <!--<ImageView-->
            <!--android:id="@+id/tuneListViewIcon"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/tune_ic_bg_blue"-->
            <!--android:paddingBottom="8dp"-->
            <!--android:paddingTop="8dp"-->
            <!--android:paddingRight="8dp"-->
            <!--android:paddingLeft="8dp"-->
            <!--android:src="@drawable/ic_mp3"/>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tuneListViewTitle"
                    android:textSize="24sp"
                    android:textColor="@android:color/white"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:text="@string/tune_listview_title" />

                <TextView
                    android:id="@+id/tuneListViewArtist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"
                    android:paddingLeft="16dp"
                    android:text="@string/tune_listview_artist" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/TuneLikeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tune_like_textView_label"
            style="@style/linkText" />

    </LinearLayout>

</LinearLayout>

