<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pixel.singletune.app.ui.FBRegister"
    android:background="@color/singletune_color">

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_alignBottom="@+id/appTitle"
            android:layout_toLeftOf="@+id/appTitle" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_marginTop="48dp"
            style="@style/appTitle" />

        <TextView
            android:id="@+id/subtitle"
            style="@style/appTitle.appSubtitle"
            android:layout_below="@+id/appTitle"
            android:typeface="sans"
            android:textStyle="italic" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/regLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/white"
        android:layout_below="@id/titleLayout">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="4dp"
            android:textSize="16sp"
            android:textColor="@color/light_gray"
            android:text="Welcome"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="4dp"
            android:background="@color/singletune_color" />

        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            android:drawableStart="@drawable/ic_user_login_register"
            android:inputType="textAutoComplete"
            style="@style/reg_form"/>

        <EditText
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            android:drawableStart="@drawable/ic_password"
            android:inputType="textPassword"
            style="@style/reg_form"/>

        <EditText
            android:id="@+id/passwordConfirmationField"
            android:hint="@string/confirm_password_hint"
            android:drawableStart="@drawable/ic_password_confirm"
            android:inputType="textPassword"
            style="@style/reg_form"/>

        <Button
            android:id="@+id/completeRegButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:text="@string/complete_registration"
            style="@style/AuthButton"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/preloader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleLayout"
        android:background="@color/singletune_color">

        <ProgressBar
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>



</RelativeLayout>
